Fix: Change desktop principal image and redimention mobile logos

--- a/client/src/app/home/quotation/quotation.component.css
+++ b/client/src/app/home/quotation/quotation.component.css
@@ -1,6 +1,7 @@
 /* Initial Form */
 
 .car-image {
+    width: 100%;
     max-width: 500px;
 }
 
